--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=localhost;Initial Catalog=SurfDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;"
+    "SQLServer": "Data Source=localhost;Initial Catalog=SurfDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;",
+    "SqlLite": "Data Source=app.db;"
   }
 }
